[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/ui/Middle-Menu.png" type="Texture" id=1]
[ext_resource path="res://assets/images/ui/up_nav_arrow.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/down_nav_arrow.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/construction_drawer.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Close_02.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Open_03.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/fonts/text_small.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/ui/construction_drawer_button_group.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Select_02.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 6.0
content_margin_right = 3.0
content_margin_top = 9.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 664, 205 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 0, 0.411765, 0 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 3.0

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 0, 0.411765, 0 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id=3]
resource_name = "hide buttons highlight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "hide info panel highlight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/InfoPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show buttons highlight"
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "show info panel highlight"
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/InfoPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hide buttons highlight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hide info panel highlight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/InfoPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "show buttons highlight"
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "show info panel highlight"
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/PanelContainer/VBoxContainer/InfoPanel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ), Color( 1, 0, 0.411765, 0 ), Color( 1, 0, 0.411765, 1 ) ]
}

[node name="ConstructionDrawer" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_bottom = 85.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 205.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="FillerControl" type="Control" parent="HBoxContainer"]
margin_right = 180.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_left = 180.0
margin_right = 844.0
margin_bottom = 205.0
grow_horizontal = 2
size_flags_horizontal = 7
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 6.0
margin_top = 9.0
margin_right = 661.0
margin_bottom = 205.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 655.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_right = 650.0
margin_bottom = 18.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 2

[node name="ribbonLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 617.0
margin_bottom = 18.0
grow_horizontal = 0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1
clip_text = true

[node name="ExpandContractBtn" type="TextureButton" parent="HBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
modulate = Color( 0.835294, 0.137255, 0.729412, 1 )
margin_left = 627.0
margin_right = 645.0
margin_bottom = 18.0
size_flags_horizontal = 9
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="ButtonsPanel" type="PanelContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 655.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 652.0
margin_bottom = 83.0
grow_horizontal = 2
size_flags_horizontal = 3
alignment = 1

[node name="UUCConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 6.0
margin_right = 66.0
margin_bottom = 80.0

[node name="PowerConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 80.0
structure_type = 1

[node name="ReclamationConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 134.0
margin_right = 194.0
margin_bottom = 80.0
structure_type = 7

[node name="AgricultureConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 198.0
margin_right = 258.0
margin_bottom = 80.0
structure_type = 2

[node name="ResidentialConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 262.0
margin_right = 322.0
margin_bottom = 80.0
structure_type = 3

[node name="OfficeConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 326.0
margin_right = 386.0
margin_bottom = 80.0
structure_type = 4

[node name="EducationConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 390.0
margin_right = 450.0
margin_bottom = 80.0
structure_type = 5

[node name="MedicalConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 454.0
margin_right = 514.0
margin_bottom = 80.0
structure_type = 6

[node name="FactoryConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 518.0
margin_right = 578.0
margin_bottom = 80.0
structure_type = 8

[node name="RecreationConstructionDrawerButtonGroup" parent="HBoxContainer/PanelContainer/VBoxContainer/ButtonsPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 582.0
margin_right = 642.0
margin_bottom = 80.0
structure_type = 9

[node name="InfoPanel" type="Panel" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 655.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 60 )
custom_styles/panel = SubResource( 5 )

[node name="FillerControl2" type="Control" parent="HBoxContainer"]
margin_left = 844.0
margin_right = 1024.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Tween" type="Tween" parent="."]

[node name="MenuOpenAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0
bus = "UI"

[node name="MenuCloseAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0
bus = "UI"

[node name="MenuSelectAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -3.0
bus = "UI"

[node name="AnimationPlayerButtons" type="AnimationPlayer" parent="."]
"anims/hide buttons highlight" = SubResource( 3 )
"anims/hide info panel highlight" = SubResource( 6 )
"anims/show buttons highlight" = SubResource( 4 )
"anims/show info panel highlight" = SubResource( 7 )

[node name="AnimationPlayerInfoPanel" type="AnimationPlayer" parent="."]
"anims/hide buttons highlight" = SubResource( 8 )
"anims/hide info panel highlight" = SubResource( 9 )
"anims/show buttons highlight" = SubResource( 10 )
"anims/show info panel highlight" = SubResource( 11 )
[connection signal="toggled" from="HBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/ExpandContractBtn" to="." method="_on_ExpandContractBtn_toggled"]
